# AnomalyDetector

./: Anomaly_Trial.ipynb  README.md  pyproject.toml
examples/: Anomaly_Trial.ipynb  Anomaly_Trial.py  Anomaly_Trial_AutoSuggest.py  quickstart.py
src/anomaly_detector/: __init__.py  detector.py  report.py
src/anomaly_detector/checks/: auto_multivariate.py  duplicate_rows.py  logical_outliers.py  null_values.py  numerical_outliers.py  pattern_validation.py  rare_values.py  type_inconsistency.py
tests/: test_rare_values.py
