[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly_detector"
version = "0.1.0"
description = "A suite of anomaly checks for pandas DataFrames"
readme = "README.md"
authors = [
  { name="ngriffen" }
]
license = { text="MIT" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0"
]

[project.urls]
"Homepage" = "https://github.com/ngriffen/AnomalyDetector"

[tool.setuptools.packages.find]
where = ["src"]
